--- a/samples/sample.html
+++ b/samples/sample.html
@@ -1,77 +1,37 @@
 <div class="blog-post-content">
     <p>2020년을 돌아봅니다.</p>
     <h2 id="기술-스택" style="position:relative;"><a href="#%EA%B8%B0%EC%88%A0-%EC%8A%A4%ED%83%9D"
-            aria-label="기술 스택 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16"
-                version="1.1" viewBox="0 0 16 16" width="16">
-                <path fill-rule="evenodd"
-                    d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z">
-                </path>
-            </svg></a>기술 스택</h2>
-    <h3 id="net-5" style="position:relative;"><a href="#net-5" aria-label="net 5 permalink" class="anchor before"><svg
-                aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16">
-                <path fill-rule="evenodd"
-                    d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z">
-                </path>
-            </svg></a>.NET 5</h3>
+            aria-label="기술 스택 permalink" class="anchor before">📢</a>기술 스택</h2>
+    <h3 id="net-5" style="position:relative;"><a href="#net-5" aria-label="net 5 permalink" class="anchor before">📢</a>.NET 5</h3>
     <p>이전에 작성했던 .NET Core 2.x ~ 3.x 응용프로그램을 .NET 5 로 이전해보고 있습니다.</p>
     <p>계속 함께할 생각입니다.</p>
-    <h3 id="react" style="position:relative;"><a href="#react" aria-label="react permalink" class="anchor before"><svg
-                aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16">
-                <path fill-rule="evenodd"
-                    d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z">
-                </path>
-            </svg></a>React</h3>
+    <h3 id="react" style="position:relative;"><a href="#react" aria-label="react permalink" class="anchor before">📢</a>React</h3>
     <p>2020 년에는 거의 대부분의 프로젝트에서 웹 프론트엔드 업무를 담당했습니다.</p>
     <p>React 를 사용해서 진행했고, 앞으로도 React 를 계속할 생각입니다.</p>
     <h3 id="nodejs" style="position:relative;"><a href="#nodejs" aria-label="nodejs permalink"
-            class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1"
-                viewBox="0 0 16 16" width="16">
-                <path fill-rule="evenodd"
-                    d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z">
-                </path>
-            </svg></a>Node.js</h3>
+            class="anchor before">📢</a>Node.js</h3>
     <p>큰 프로젝트가 아니면 nodejs 는 좋은 백엔드 플랫폼으로 생각됩니다.</p>
     <p><a href="http://expressjs.com">express.js</a> 를 사용해서 구현했는데, 이제 <a href="http://nestjs.com/">nestjs</a> 를 활용하기 위해
         공부하고 있습니다.</p>
     <p>그리고, 크로스 플랫폼 CLI 도구 작성에도 활용하고 있습니다.</p>
     <h3 id="typescript" style="position:relative;"><a href="#typescript" aria-label="typescript permalink"
-            class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1"
-                viewBox="0 0 16 16" width="16">
-                <path fill-rule="evenodd"
-                    d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z">
-                </path>
-            </svg></a>Typescript</h3>
+            class="anchor before">📢</a>Typescript</h3>
     <p>Javascript 로 작성해야 하는 코드는 이제 Typescript 를 사용하는 것이 더 편하게 느껴집니다.</p>
     <p>코드를 조금더 작성해야하고, 트랜스파일 구성을 해야 하는 것은 불편하지만, 코드를 작성할 때 더 편리합니다.</p>
     <p>계속 Typescript 를 계속 사용할 생각입니다.</p>
     <h3 id="container" style="position:relative;"><a href="#container" aria-label="container permalink"
-            class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1"
-                viewBox="0 0 16 16" width="16">
-                <path fill-rule="evenodd"
-                    d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z">
-                </path>
-            </svg></a>Container</h3>
+            class="anchor before">📢</a>Container</h3>
     <p>컨테이너 기술을 도커로 익히고 있는데, 다른 컨테이너도 조금씩 배워야 합니다.</p>
     <p>AWS Lightsail 에서 동작하는 웹 응용프로그램을 컨테이너를 사용하도록 이전했습니다.</p>
     <h3 id="react-native" style="position:relative;"><a href="#react-native" aria-label="react native permalink"
-            class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1"
-                viewBox="0 0 16 16" width="16">
-                <path fill-rule="evenodd"
-                    d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z">
-                </path>
-            </svg></a>React Native</h3>
+            class="anchor before">📢</a>React Native</h3>
     <p>2019년을 돌아보고, 2020년에 하고 싶은 것들이 있었는데, 생각이 바뀐 부분이 있습니다.</p>
     <p>간단한 기능으로 구성된 모바일 앱을 작성할때 좋은 기술이라고 생각합니다.</p>
     <p>그런데, 직접 구현할 수 없는 기능 또는 네이티브 기능이 필요하고, 그 기능을 사용하기 위해 패키지를 검색했는데 구현된 코드를 찾을 수 없다면 굉장히 난감했습니다.</p>
     <p>다른 플랫폼도 동일하겠지만, 쉽게 접근했다가 매우 힘들어질 수 있겠다고 생각되었습니다.</p>
     <p>이 기술은 메인으로 가져가기보다는 간단하게 모바일 앱을 구현할 때만 사용해야겠습니다.</p>
     <h2 id="2020년-이야기" style="position:relative;"><a href="#2020%EB%85%84-%EC%9D%B4%EC%95%BC%EA%B8%B0"
-            aria-label="2020년 이야기 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16"
-                version="1.1" viewBox="0 0 16 16" width="16">
-                <path fill-rule="evenodd"
-                    d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z">
-                </path>
-            </svg></a>2020년 이야기</h2>
+            aria-label="2020년 이야기 permalink" class="anchor before">📢</a>2020년 이야기</h2>
     <p>스타트업 팀과 몇몇 작업을 같이 진행했습니다.</p>
     <p>팀의 서비스 기획이 정리되지 않아 진행을 포기한 프로젝트도 있고, 마무리 단계까지 진행하고 사회적 문저로 아직 서비스를 시작하지 못한 팀도 있습니다.</p>
     <p>그리고, 파트타임으로 일을 시작했습니다.</p>
@@ -81,12 +41,7 @@
     <p>마무리 단계에서 서비스가 아직 시작되지 않은 팀은 COVID-19 로 인해 서비스 시작이 늦어지고 있습니다.</p>
     <p>그리고, 페이스북 챗으로 연락했던 팀에서 파트타임을 제안해주셔서 쉬엄쉬엄 작업을 진행하고 있습니다.</p>
     <h3 id="응용프로그램" style="position:relative;"><a href="#%EC%9D%91%EC%9A%A9%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8"
-            aria-label="응용프로그램 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16"
-                version="1.1" viewBox="0 0 16 16" width="16">
-                <path fill-rule="evenodd"
-                    d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z">
-                </path>
-            </svg></a>응용프로그램</h3>
+            aria-label="응용프로그램 permalink" class="anchor before">📢</a>응용프로그램</h3>
     <p>2020년에 게시된 응용프로그램 목록입니다.</p>
     <ul>
         <li><a href="https://flexbox.bbon.me/">Help me! Display: flex</a></li>
@@ -98,12 +53,7 @@
         <li><a href="https://resume.bbon.me/">공개 이력서</a></li>
     </ul>
     <h2 id="2021년에는" style="position:relative;"><a href="#2021%EB%85%84%EC%97%90%EB%8A%94"
-            aria-label="2021년에는 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16"
-                version="1.1" viewBox="0 0 16 16" width="16">
-                <path fill-rule="evenodd"
-                    d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z">
-                </path>
-            </svg></a>2021년에는</h2>
+            aria-label="2021년에는 permalink" class="anchor before">📢</a>2021년에는</h2>
     <p>지금처럼 천천히 업무를 찾고, 진행하고 싶습니다.</p>
     <p>좋은 분들과 계속 인연을 가져가고 싶습니다.</p>
     <p>Apple silicon 이 탑재된 mac 을 구입해야 합니다.
