--- a/samples/sample.html
+++ b/samples/sample.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Sample</title>
+</head>
+<body>
 <div class="blog-post-content">
     <p>2020년을 돌아봅니다.</p>
     <h2 id="기술-스택" style="position:relative;"><a href="#%EA%B8%B0%EC%88%A0-%EC%8A%A4%ED%83%9D"
@@ -61,3 +70,6 @@
     <p>COVID-19 로부터 안전해지는 그 때를 기다리고 있습니다.
         만나뵙고 싶은 분들이 많은데, 찾아뵙고 싶습니다.</p>
 </div>
+
+</body>
+</html>
